--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,12 @@ dependencies:
   carousel_pro:
   string_validator:
   localize_and_translate:
+  firebase_core: "0.7.0"
+  firebase_auth: "^0.20.0+1"
+  cloud_firestore: "^0.16.0"
+  firebase_storage: "^7.0.0"
+  logger:
+  image_picker:
 
 dev_dependencies:
   flutter_test:
